--- a/style.css
+++ b/style.css
@@ -1,29 +1,31 @@
 html, body {
     margin: 0;
     padding: 0;
-  }
+}
   
-  header {
+header {
     background-color: #333333;
-  }
+    position: fixed;
+    width: 100%;
+}
   
-  nav {
+nav {
     margin: 0;
     padding: 20px 0;
-  }
+}
   
-  nav li {
+nav li {
     color: #fff;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 12px;
-  }
+}
   
-  main {
+main {
     text-align: center;
-  }
+}
   
-  main h1 {
+main h1 {
     color: #333;
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
@@ -32,37 +34,37 @@ html, body {
     padding-top: 80px;
     margin-bottom: 80px;
     text-transform: uppercase;
-  }
+}
   
-  footer {
+footer {
     background-color: #333;
     color: #fff;
     padding: 30px 0;
-  }
+}
   
-  footer p {
+footer p {
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
     font-size: 11px;
-  }
+}
   
-  .container {
+.container {
     max-width: 940px;
     margin: 0 auto;
     padding: 0 10px;
     text-align: center;
-  }
+}
   
-  .jumbotron {
+.jumbotron {
     height: 800px;
     background-image: url("https://content.codecademy.com/projects/broadway/bg.jpg");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  }
+}
   
-  .btn-main {
+.btn-main {
     background-color: #333;
     color: #fff;
     font-family: 'Raleway', sans-serif;
@@ -72,9 +74,9 @@ html, body {
     padding: 16px 40px;
     text-decoration: none;
     text-transform: uppercase;
-  }
+}
   
-  .btn-default {
+.btn-default {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 10px;
@@ -83,37 +85,37 @@ html, body {
     text-decoration: none;
     text-transform: uppercase;  
     margin-bottom: 20px;      
-  }
+}
   
-  .supporting {
+.supporting {
     padding-top: 80px;
     padding-bottom: 100px;
-  }
+}
   
-  .supporting .col {
+.supporting .col {
     font-family: 'Raleway', sans-serif;
     text-align: center;
-  }
+}
   
-  .supporting img {
+.supporting img {
     height: 32px;
-  }
+}
   
-  .supporting h2 {
+.supporting h2 {
     font-weight: 600;
     font-size: 23px;
     text-transform: uppercase;
-  }
+}
   
-  .supporting p {
+.supporting p {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     padding: 0 20px;
     margin-bottom: 20px;
-  }
-  
-  .supporting a {
+}
+
+.supporting a {
     background-color: white;
     color: #333333;
     font-family: 'Raleway', sans-serif;
@@ -125,15 +127,15 @@ html, body {
     padding: 10px;
     margin-bottom: 10px;
     border: 2px solid #333333; 
-  }
-  
-  @media (max-width: 500px) {
-    main h1 {
-      font-size: 50px;
-      padding: 0 40px;
-    }
-  
-    .supporting .col {
-      width: 100%;
-    }
-  }
+}
+
+@media (max-width: 500px) {
+main h1 {
+    font-size: 50px;
+    padding: 0 40px;
+}
+
+.supporting .col {
+    width: 100%;
+}
+}
