--- a/style.css
+++ b/style.css
@@ -7,11 +7,13 @@ header {
     background-color: #333333;
     position: fixed;
     width: 100%;
+    z-index: 5;
 }
   
 nav {
     margin: 0;
     padding: 20px 0;
+    top: 80px;
 }
   
 nav li {
@@ -19,10 +21,13 @@ nav li {
     font-family: 'Raleway', sans-serif;
     font-weight: 600;
     font-size: 12px;
+    display: inline-block;
+    width: 80px;
 }
   
 main {
     text-align: center;
+    position: relative;
 }
   
 main h1 {
